style.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');

* {
    border: 0;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background: rgb(250, 250, 250);
    font-family: 'Inter', sans-serif;
}

a {
    color: inherit;
    font-family: inherit;
    font-size: inherit;
    text-decoration: none;
}


#navbar {
    background: white;
    color: rgb(13, 26, 38);
    position: fixed;
    top: 0;
    height: 60px;
    line-height: 60px;
    width: 100vw;
    z-index: 10;
}

.nav-wrapper {
    margin: auto;
    text-align: center;
    width: 70%;
} @media(max-width: 768px) {
    .nav-wrapper {
        width: 90%;
    }
} @media(max-width: 638px) {
    .nav-wrapper {
        width: 100%;
    }
}


.logo {
    float: left;
    margin-left: 28px;
    margin-top: 10px;
    height: 80px;
}

.btn {
    float: right;
    margin-right: -100px;
    height: 60px;
}
#navbar ul {
    display: inline-block;
    float: right;
    list-style: none;
    margin-top: -2px;
    text-align: right;
    transition: transform 0.5s ease-out;
    -webkit-transition: transform 0.5s ease-out;
} @media(max-width: 1080px) {
    #navbar #menu{
        display: none;
    }
} @media(orientation: landscape) {
    #navbar ul {
        display: inline-block;
    }
}

#navbar li {
    display: inline-block;
}

#navbar li a {
    color: rgb(13, 26, 38);
    display: block;
    font-size: 0.7em;
    height: 50px;
    letter-spacing: 1px;
    margin: 0 20px;
    padding: 0 4px;
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    transition: all 0.5s ease;
    -webkit-transition: all 0.5s ease;
}

#navbar li a:hover {
    color: rgb(28, 121, 184);
    transition: all 1s ease;
    -webkit-transition: all 1s ease;
}

#navbar li a:before, #navbar li a:after {
    content: '';
    position: absolute;
    width: 0%;
    height: 1px;
    bottom: -1px;
    background: rgb(13, 26, 38);
}

#navbar li a:before {
    left: 0;
    transition: 0.5s;
}

#navbar li a:after {
    background: rgb(13, 26, 38);
    right: 0;
}

#navbar li a:hover:before {
    background: rgb(13, 26, 38);
    width: 100%;
    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
}

#navbar li a:hover:after {
    background: transparent;
    width: 100%;
}

#navbar .btn {
    font-size: 12px;
    background-color: #f44e4e;
    padding: 5px 20px;
    border: solid #f44e4e 2px;
    box-shadow: rgba(33, 35, 38, 0.1) 0 10px 10px -10px;
    border-radius: 5px;
    transition : 250ms;
    transform: translateY(0);
    display: flex;
    flex-direction: row;
    align-items: center;
    cursor: pointer;
    text-transform: initial;
    margin-top: 5px;
    width: 120px;
    height: 50px;
}

#navbar .btn:hover{

    transition : 285ms;
    padding: 5px 20px;
    background-color: #fff;
    border: solid 1px #f44e4e;
}

.add-bot{
    background-color: transparent;
    color: #ffffff;
}

.add-bot:hover {
    color: rgb(13, 26, 38);
    cursor: pointer;
}

@media(max-width: 1080px) {
    #navbar .btn
    {
        opacity: 0;
    }
    .menuIcon {
        cursor: pointer;
        display: block;
        position: fixed;
        right: 15px;
        top: 20px;
        height: 23px;
        width: 27px;
        z-index: 12;
    }

    .icon-bars {
        background: rgb(13, 26, 38);
        position: absolute;
        left: 1px;
        top: 45%;
        height: 2px;
        width: 20px;
        -webkit-transition: 0.4s;
        transition: 0.4s;
    }

    .icon-bars::before {
        background: rgb(13, 26, 38);
        content: '';
        position: absolute;
        left: 0;
        top: -8px;
        height: 2px;
        width: 20px;
        -webkit-transition: 0.3s width 0.4s;
        transition: 0.3s width 0.4s;
    }

    .icon-bars::after {
        margin-top: 0px;
        background: rgb(13, 26, 38);
        content: '';
        position: absolute;
        left: 0;
        bottom: -8px;
        height: 2px;
        width: 20px;
        -webkit-transition: 0.3s width 0.4s;
        transition: 0.3s width 0.4s;
    }

    .icon-bars.overlay {
        background: rgb(97, 114, 129);
        background: rgb(183, 199, 211);
        width: 20px;
        animation: middleBar 3s infinite 0.5s;
        -webkit-animation: middleBar 3s infinite 0.5s;
    } @keyframes middleBar {
          0% {width: 0px}
          50% {width: 20px}
          100% {width: 0px}
      } @-webkit-keyframes middleBar {
            0% {width: 0px}
            50% {width: 20px}
            100% {width: 0px}
        }

    .icon-bars.overlay::before {
        background: rgb(97, 114, 129);
        background: rgb(183, 199, 211);
        width: 10px;
        animation: topBar 3s infinite 0.2s;
        -webkit-animation: topBar 3s infinite 0s;
    } @keyframes topBar {
          0% {width: 0px}
          50% {width: 10px}
          100% {width: 0px}
      } @-webkit-keyframes topBar {
            0% {width: 0px}
            50% {width: 10px}
            100% {width: 0px}
        }

    .icon-bars.overlay::after {
        background: rgb(97, 114, 129);
        background: rgb(183, 199, 211);
        width: 15px;
        animation: bottomBar 3s infinite 1s;
        -webkit-animation: bottomBar 3s infinite 1s;
    } @keyframes bottomBar {
          0% {width: 0px}
          50% {width: 15px}
          100% {width: 0px}
      } @-webkit-keyframes bottomBar {
            0% {width: 0px}
            50% {width: 15px}
            100% {width: 0px}
        }


    .menuIcon.toggle .icon-bars {
        top: 5px;
        transform: translate3d(0, 5px, 0) rotate(135deg);
        transition-delay: 0.1s;
        transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
    }

    .menuIcon.toggle .icon-bars::before {
        top: 0;
        transition-delay: 0.1s;
        opacity: 0;
    }

    .menuIcon.toggle .icon-bars::after {
        top: 10px;
        transform: translate3d(0, -10px, 0) rotate(-270deg);
        transition-delay: 0.1s;
        transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
    }

    .menuIcon.toggle .icon-bars.overlay {
        width: 20px;
        opacity: 0;
        -webkit-transition: all 0s ease 0s;
        transition: all 0s ease 0s;
    }
}

.overlay-menu {
    background: #f5f5f5;
    color: rgb(31, 31, 31);
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 0;
    right: 0;
    padding-right: 15px;
    transform: translateX(-100%);
    width: 100vw;
    height: 100vh;
    -webkit-transition: transform 0.2s ease-out;
    transition: transform 0.2s ease-out;
}

.overlay-menu ul, .overlay-menu li {
    display: block;
    position: relative;
}

.overlay-menu li a {
    display: block;
    font-size: 1.8em;
    letter-spacing: 4px;
    padding: 10px 0;
    text-align: right;
    text-transform: uppercase;
    -webkit-transition: color 0.3s ease;
    transition: color 0.3s ease;
}

.overlay-menu li a:hover,
.overlay-menu li a:active {
    color: rgb(101, 101, 101);
    -webkit-transition: color 0.3s ease;
    transition: color 0.3s ease;
}

/* Hero banner */
.container {
    height: 600px;
    padding: 20px;
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: center;
    gap: 40px;
    background-color: #F5F7FA;

}

.container img {
  width: 30%;
}

.hero-text {
  width: 80%;
}

.hero-text h1 {
  font-size: 3.3rem;
  margin-bottom: 12px;
  color: #4D4D4D;
}

.hero-text span {
    color: #F44E4E;
}

.hero-text p {
    font-size: 1.4rem;
    margin-bottom: 12px;
    color: #717171;
}

.join-btn {
    padding: 1em 2.1em 1.1em;
    border-radius: 4px;
    margin: 8px;
    border: solid 1px #f44e4e;;
    background-color: #F44E4E;
    color: #FFFFFF;
    font-weight: 500;
    font-size: 0.85em;
    text-transform: uppercase;
    text-align: center;
}

.join-btn:hover {
    transition : 285ms;
    background-color: #fff;
    cursor: pointer;
    color: rgb(13, 26, 38);
}

@media (max-width: 884px) {
    .container {
        margin-top: 10px;
        flex-direction: column;
    }
    .hero-text {
        width: 100%;
        text-align: center;
    }
    .hero-text h1 {
        font-size: 3rem;
    }
}

@media (max-width: 678px) {
    .hero-text h1 {
        font-size: 2rem;
    }
}

/* Cards */

.cards-container{
    margin-top: 120px;
    padding:15px 9%;
    padding-bottom: 100px;
}

.cards-container .heading{
    text-align: center;
    padding-bottom: 15px;
    color:#4D4D4D;
    font-size: 60px;
}

.cards-container .p-heading{
    text-align: center;
    padding-bottom: 15px;
    color: #4D4D4D;
    font-size: 20px;
}

.cards-container .box-container{
    margin-top: 20px;
    display: grid;
    grid-template-columns: repeat(3, minmax(270px, 1fr));
    gap:15px;
}

.cards-container .box-container .box{
    box-shadow: 0 5px 10px rgba(0,0,0,.2);
    margin: 30px;
    border-radius: 5px;
    background: #fff;
    text-align: center;
    padding:30px 20px;
}

.cards-container .box-container .box img{
    height: 80px;
}

.cards-container .box-container .box h3{
    color:#444;
    font-size: 22px;
    padding:10px 0;
}

.cards-container .box-container .box p{
    color:#777;
    font-size: 15px;
    line-height: 1.8;
}

.cards-container .box-container .box:hover{
    transition: 285ms;
    box-shadow: 0 10px 15px rgba(0,0,0,.3);
    transform: scale(1.03);
}

@media (max-width:768px){
    .cards-container{
        padding:20px;
    }
}

/* About */
#about{
    display: flex;
    align-items: center;
    width: 85%;
    margin: auto;
    background-color: #F5F7FA;
}

#about img {
    flex: 0 50%;
    max-width: 50%;
    height: auto;
}


.content {
    padding: 35px;
}

.content h2 {
    color: #4D4D4D;
    font-size: 24px;
    margin: 15px 0;
}

.content span {
    color: #F44E4E;
}

.content p {
    color: #717171;
    font-size: 18px;
    line-height: 1.2;
    margin: 15px 0;
}

.content .add-btn {
    display: inline-block;
    padding: 1em 2.1em 1.1em;
    border-radius: 4px;
    border: none;
    background-color: #F44E4E;
    color: #FFFFFF;
    font-weight: 500;
    font-size: 0.85em;
    text-transform: uppercase;
    text-align: center;
    cursor: pointer;
}

@media(max-width: 768px){
    #about {
        flex-direction: column;
    }
    #about img {
        flex: 0 100%;
        max-width: 100%;
    }
    .content {
        flex: 0 100%;
        max-width: 100%;
        padding: 15px;
    }
}

/* Stats */
#stats {
    display: flex;
    align-items: center;
    width: 85%;
    margin: auto;
}

#stats .stats-box-container {
    margin: 20px auto 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    max-width: 33vw;
    width: 50%;
    padding: 0;
}

#stats .content {
    width: 50%;
    padding: 0;

}

#stats .stats-box {
    margin: 30px;
    border-radius: 5px;
    text-align: center;
    padding:30px 20px;
}


#stats .stats-box h3{
    color:#444;
    font-size: 22px;
    padding:10px 0;
}

#stats .stats-box p{
    color:#777;
    font-size: 15px;
}

@media(max-width: 768px){
    #stats .stats-box-container{
        flex-direction: column;
    }
}

